syntax = "proto3";
package player.v1;

option go_package = "github.com/mcdev12/dynasty/go/internal/genproto/player/v1;playerv1";

// NFLPlayerProfile represents NFL-specific player attributes
message NFLPlayerProfile {
  string player_id      = 1;
  string position       = 2;
  string status         = 3;
  string college        = 4;
  int32  jersey_number  = 5;
  int32  experience     = 6;
  string birth_date     = 7;  // ISO 8601 date string (YYYY-MM-DD)
  int32  height_cm      = 8;
  int32  weight_kg      = 9;
  string height_desc    = 10;
  string weight_desc    = 11;
}

// PlayerProfile is a oneof wrapper for all sport-specific profiles
message PlayerProfile {
  oneof profile {
    NFLPlayerProfile nfl_profile = 1;
    // NBAPlayerProfile nba_profile = 2;
    // MLBPlayerProfile mlb_profile = 3;
  }
}
